--- a/services/filebeat/filebeat.yml
+++ b/services/filebeat/filebeat.yml
@@ -3,6 +3,7 @@ filebeat:
     - type: log
       json:
         message_key: message
+        keys_under_root: true
       paths:
         - /var/log/ads/app.log
         - /var/log/geocoder/app.log
