--- a/services/logstash/pipelines/ruby_micro.config
+++ b/services/logstash/pipelines/ruby_micro.config
@@ -7,10 +7,12 @@ input {
 filter {
   mutate {
     gsub => [
-      "msg", "\"uuid\" = '.+'", "\"uuid\" = [filtered]"
+      "[json][msg]", "\"uuid\" = '.+'", "\"uuid\" = [filtered]"
     ]
 
-    update => { "request_id" => "My new message" }
+    gsub => [
+      "[json][query]", "password=.+", "password=[filtered]"
+    ]
   }
 }
 output {
